# eCommerce-Product-Module

./: Readme.md
.github/workflows/: backend-build-release.yml  frontend-build-release.yml
backend/: Cargo.toml  License.txt  Readme.md  Specification.md
backend/src/: database.rs  main.rs  structures.rs
backend/src/crud/: analytics.rs  mod.rs  product.rs  profile.rs
backend/src/pages/: 404.html
backend/src/routes/: analytics.rs  frontend.rs  mod.rs  product.rs  profile.rs
frontend/: Readme.md  dependencies  detailed-view.html  package-lock.json  package.json  vite.config.js
frontend/js/: search.js
frontend/src/: 404.html  detailed-view.html  index.html  product-search.html
frontend/src/js/: main.js  search.js  view.js
