[package]
name = "group-3-ecommerce-product-module"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
mongodb = "2.7.0"
futures = "0.3.29"
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-cors = "0.6.4"
env_logger = "0.10.0"
meilisearch-sdk = "0.24.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
